DND

   OnlineGDB beta
online compiler and debugger for c/c++
code. compile. run. debug. share.
IDE
My Projects
Learn Programming
Programming Questions
Jobs new
Sign Up
Login
51.9K
ads via Carbon
Grow customer love with our Marketing CRM.
ADS VIA CARBON
About • FAQ • Blog • Terms of Use • Contact Us • GDB Tutorial • Credits • Privacy
© 2016 - 2019 GDB Online
SPONSOR
Slack — Bring your team together with Slack, the collaboration hub for work.
       Language   
main.c
  
  
input
stderr
Compilation failed due to following error(s).main.c: In function ‘get_race’:
main.c:932:1: error: expected ‘while’ before ‘int’
 int get_stat_mods(int stat) {
 ^~~
main.c: In function ‘get_String’:
main.c:1079:39: warning: comparison between pointer and integer
   for (n = 0; n < 50 && new_string[n] != "\0"; n++)
                                       ^~
main.c: In function ‘get_race’:
main.c:1338:1: error: expected declaration or statement at end of input
 }
 ^
Call Stack
Local Variables
Registers
Display Expressions
Breakpoints and Watchpoints
